fix dropdowns to be cut off at the bottom of the page
Line 6104 
.control-group:last-of-type .chzn-container-active .chzn-drop  {
    position:static!important;

}

--- a/administrator/templates/isis/css/template.css
+++ b/administrator/templates/isis/css/template.css
@@ -6100,6 +6100,12 @@ fieldset.radio.btn-group {
 	-moz-border-radius: 0;
 	border-radius: 0;
 }
+
+.control-group:last-of-type .chzn-container-active .chzn-drop  {
+    position:static!important;
+
+}
+
 .element-invisible {
 	position: absolute;
 	padding: 0;
